# Search_Engine

./: AVLTree.h  CMakeLists.txt  Document.cpp  Document.h  DocumentParser.cpp  DocumentParser.h  Entry.cpp  Entry.h  HashTable.h  Index.cpp  Index.h  IndexHandler.cpp  IndexHandler.h  SearchEngine.cpp  SearchEngine.h  SearchQuery.cpp  SearchQuery.h  main.cpp
